@startuml

class Game {
  +update()
  +tick()
  +moveLeft()
  +moveRight()
  +rotateCW()
  +rotateCCW()
}

class Board {
  +clear()
  +lock()
  +clearLines()
  +isValidPosition()
}

class Tetromino {
  +move()
  +rotateClockwise()
  +rotateCounterClockwise()
}

class GameplayRules {
  +canMove()
  +canRotate()
}

Game --> Board
Game --> Tetromino
Game --> GameplayRules

GameplayRules --> Board
GameplayRules --> Tetromino

@enduml